<resources>
    <string name="app_name">PMA_Chat</string>
    <string name="chat_splashName">PMA CHAT</string>
    <string name="userOpt">CHAT SETTINGS CONTACT</string>
    <string name="userTitle">USERS</string>
    <string name="userTitleFriendDetails">FRIEND DETAILS</string>
    <string name="login">Login</string>
    <string name="loginHeader">PMA Chat Login</string>
    <string name="logout">Logout</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="emailFieldEmptyMessage">Email is empty!</string>
    <string name="passwordFieldEmptyMessage">Password is empty!</string>
    <string name="passwordConfirmFieldEmptyMessage">Password is empty!</string>
    <string name="nameFieldEmptyMessage">Name is empty!</string>
    <string name="phoneNumberFieldEmptyMessage">Phone number is empty!</string>
    <string name="loginFailedMessage">Login Failed!</string>
    <string name="loginGoToSignUp">Don\'t have an account? Sign Up here</string>
    <string name="signUp">Sign Up</string>
    <string name="signUpHeader">Sign Up on PMA Chat</string>
    <string name="name">Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="confirmPassword">Password confirm</string>
    <string name="signUpGoBackToLogin">Back to Login</string>
    <string name="birthdayLabel">Birthday</string>
    <string name="startChat">Start Chat</string>
    <string name="userFullName">Name: Full name</string>
    <string name="userBirth">Birthday: 1.5.1990.</string>
    <string name="userEditName">Username</string>
    <string name="userEditPass">Password</string>
    <string name="userConfPass">Confirm Password</string>
    <string name="userEditBirth">Birthday</string>
    <string name="userEdit">EDIT</string>
    <string name="userTitleEdit">EDIT PROFILE</string>
    <string name="friendsList">Contacts</string>
    <string name="chatList">Chats</string>
    <string name="myProfile">Profile</string>
    <string name="change_picture">Change picture</string>
    <string name="edit_profile_settings">Edit profile settings</string>
    <string name="chat">Chat</string>
    <string name="profileSettings">Profile Settings</string>
    <string name="exit">Exit</string>
    <string name="chatMessageFieldPlaceholder">Type a message ...</string>
    <string name="chatMessageSendText">Send</string>
    <string name="save">Save</string>
    <string name="selectedDateOfBirth">Date of birth</string>
    <string name="successfulRegistrationMessage">Successful Registration! You are logged in</string>
    <string name="failedRegistrationMessage">Registration Failed!</string>
    <string name="passwordAndConfirmationDoNotMatchMessage">Password and Password Confirm do not match!</string>
    <string name="registeringUserMessage">Registering User ...</string>
    <string name="failedSavingUserInfoMessage">Saving user info failed!</string>
    <string name="profileSettingsSuccessfullyChanged">Profile settings successfully changed!</string>
    <string name="profileImageSuccessfullyChanged">Profile image successfully changed!</string>
    <string name="nameLabel">Name:&#160;</string>
    <string name="firebaseNameLabel">PMA_Chat Name:&#160;</string>
    <string name="emailLabel">Email:&#160;</string>
    <string name="phoneNumberLabel">Phone Number:&#160;</string>
    <string name="chatContactProfileTitle">Contact Profile</string>
    <string name="noInternetConnection">No internet connection</string>
    <string name="chatsTitle">Chats</string>
    <string name="chatContactsTitle">Contacts</string>
    <string name="googleApiKey">AIzaSyA-S6yoLjipkHSdEWzPIKvMQTCU5heFVEA</string>
    <string name="location">Location</string>

</resources>