<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorAccent"
        android:paddingTop="10dp"
        android:text="@string/loginHeader"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/loginPicture"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/loginHeader"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/ic_login"/>


    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loginPicture"
        android:layout_marginTop="19dp"
        android:hint="@string/loginEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loginEmail"
        android:layout_marginTop="41dp"
        android:hint="@string/loginPassword"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/loginBtn"
        android:textColor="#FFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvGoToSignUp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/colorAccent"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tvGoToSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/loginGoToSignUp"
        android:textAlignment="center" />

</RelativeLayout>