<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ></LinearLayout>

    <Button
        android:id="@+id/friendsListBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"

        android:text="@string/friendsList" />

    <Button
        android:id="@+id/profileSettingsBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/friendsListBtn"
        android:layout_below="@+id/friendsListBtn"
        android:text="@string/profileSettings" />

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/exit"
        android:layout_below="@+id/profileSettingsBtn"
        android:layout_alignParentStart="true" />
</RelativeLayout>