<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/chatContactProfileTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:text="@string/chatContactProfileTitle"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFF" />

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/chatContactProfileTitle"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/ic_android_logo" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageViewProfile"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:padding="5dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvFirebaseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvName"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:padding="5dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvSignUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvFirebaseName"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/loginEmail"
        android:padding="5dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvSignUpEmail"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:padding="5dp"
        android:hint="@string/phoneNumber"
        android:textAlignment="center" />

    <Button
        android:id="@+id/startChatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent"
        android:text="@string/startChat"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="#FFF" />


</RelativeLayout>