<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:paddingTop="10dp"
        android:text="@string/signUpHeader"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/loginPicture"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/tvSignUp"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/ic_login"/>

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loginPicture"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/txtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtName"
        android:ems="10"
        android:hint="Number for ex: +381643332211"
        android:inputType="phone"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPhoneNumber"
        android:background="@color/colorAccent"
        android:text="@string/signUp"
        android:layout_alignParentStart="true"
        android:textColor="#FFF" />

</RelativeLayout>