<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/loginBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/colorAccent"/>

    <Button
        android:text="@string/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/signupBtn"
        android:layout_below="@+id/loginBtn"
        android:layout_alignStart="@+id/loginBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/colorAccent"/>

    <TextView
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="10dp"
        android:background="@color/colorAccent"
        android:id="@+id/textView2"
        android:textSize="22sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/loginUsername"
        android:ems="10"
        android:id="@+id/loginUsername"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/loginPassword"
        android:ems="10"
        android:id="@+id/loginPassword"
        android:layout_below="@+id/loginUsername"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

</RelativeLayout>